--- a/passeport.opam
+++ b/passeport.opam
@@ -4,7 +4,7 @@ synopsis: "A library for Dream authentication."
 description:
   "An authentication middleware for Dream web framework, with pluggable authentication strategies."
 maintainer: ["Karan Ahlawat"]
-authors: ["Karan Ahlawat"]
+authors: ["Karan Ahlawat" "theteachr"]
 license: "MIT"
 homepage: "https://github.com/KaranAhlawat/passeport"
 bug-reports: "https://github.com/KaranAhlawat/passeport/issues"
